menu for a peer application